--- a/src/html/references.html
+++ b/src/html/references.html
@@ -1,18 +1,11 @@
-{#
-  Nunjucks Templating!
-  Homepage: https://mozilla.github.io/nunjucks/
-  Docs: https://mozilla.github.io/nunjucks/api.html
-#}
-
 {% extends 'layouts/application.html' %}
 
-
 {% block navigation %}
-  {{ macros.navigation('home') }}
+  {{ macros.navigation('references') }}
 {% endblock %}
 
 {% block content %}
-  <h1 data-module="example">{{ message }}</h1>
+  <h1 data-module="example">{{ references }}</h1>
 
   {% include 'components/example-component/index.html' %}
 {% endblock %}
