main and footer nav in one partial (macro), displays differently based on condition

--- a/src/html/macros/helpers.html
+++ b/src/html/macros/helpers.html
@@ -9,16 +9,29 @@
 	<link rel="stylesheet" href="{{ 'stylesheets/components/' ~ stylesheet ~ '/index.css' }}">
 {%- endmacro %}
 
-{% macro navigation(activePage) %}
-<link rel="stylesheet" href="{{ 'stylesheets/components/navigation/index.css' }}">
+{% macro navigation(activePage, isFooterNav) %}
+  {% if isFooterNav == true %}
+  <h3>Footer Navigation</h3>
+  {% else %}
+  <link rel="stylesheet" href="{{ 'stylesheets/components/navigation/index.css' }}">
   <h3>Navigation</h3>
+  {% endif %}
   <nav>
     <ul>
-      <li><a href="/" class="{% if activePage == 'home' %}active{% endif %}">home</a></li>
-      <li><a href="startup.html" class="{% if activePage == 'startup' %}active{% endif %}">startup Studio</a></li>
-      <li><a href="about.html" class="{% if activePage == 'about' %}active{% endif %}">about us</a></li>
-      <li><a href="references.html" class="{% if activePage == 'references' %}active{% endif %}">meet us</a></li>
-      <li><a href="contacts.html" class="{% if activePage == 'contacts' %}active{% endif %}">contacts</a></li>
+      <li><a href="/" class="{% if activePage == 'home' %}active{% endif %}">Home</a></li>
+      <li><a href="startup.html" class="{% if activePage == 'startup' %}active{% endif %}">Startup Studio</a></li>
+
+      {% if isFooterNav == true %}
+      <li><a href="teamasservice.html">Teams As Service</a></li>
+      <li><a href="https://prodeti.topmonks.cz/">Programming for Kids</a></li>
+      {% endif %}
+
+      {% if isFooterNav != true %}
+      <li><a href="about.html" class="{% if activePage == 'about' %}active{% endif %}">About Us</a></li>
+      {% endif %}
+
+      <li><a href="references.html" class="{% if activePage == 'references' %}active{% endif %}">Meet Us</a></li>
+      <li><a href="contacts.html" class="{% if activePage == 'contacts' %}active{% endif %}">Contacts</a></li>
     </ul>
   </nav>
 {% endmacro %}
