page Header macro

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -5,9 +5,7 @@
 {% endblock %}
 
 {% block content %}
-  <h1 data-module="example">{{ about }}</h1>
-
-  {% include 'components/example-component/index.html' %}
+{{ macros.pageHeader('About Us') }}
 {% endblock %}
 
 
