--- a/src/html/meetus.html
+++ b/src/html/meetus.html
@@ -1,11 +1,11 @@
 {% extends 'layouts/application.html' %}
 
 {% block navigation %}
-{{ macros.navigation('about') }}
+{{ macros.navigation('meetus') }}
 {% endblock %}
 
 {% block content %}
-{{ macros.pageHeader('References') }}
+{{ macros.pageHeader('Community','Learn or die. Teach or die. Only learning and teaching brains flourish.') }}
 {% endblock %}
 
 
