--- a/src/html/teamasservice.html
+++ b/src/html/teamasservice.html
@@ -5,7 +5,9 @@
 {% endblock %}
 
 {% block content %}
-  <h1 data-module="example">Teams As Service</h1>
+{{ macros.pageHeader('You deserve a great team!') }}
+
+
 {% endblock %}
 
 
