--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -5,9 +5,7 @@
 {% endblock %}
 
 {% block content %}
-  <h1 data-module="example">{{ contacts }}</h1>
-
-  {% include 'components/example-component/index.html' %}
+  {{ macros.pageHeader('Contacts') }}
 {% endblock %}
 
 
