old structure is back now

--- a/src/html/caffe.topmonks.cz/index.html
+++ b/src/html/caffe.topmonks.cz/index.html
@@ -1,4 +1,5 @@
 {% extends 'layouts/application.html' %}
+{% block title %}caffe.topmonks.cz{% endblock %}
 
 {% block navigation %}
   {{ macros.navigation('caffe') }}
