--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,6 +5,7 @@
 #}
 
 {% extends 'layouts/application.html' %}
+{% block title %}Rozcestník{% endblock %}
 
 {% block navigation %}
   {{ macros.navigation('home') }}
