--- a/src/html/studio.topmonks.com/index.html
+++ b/src/html/studio.topmonks.com/index.html
@@ -1,4 +1,5 @@
 {% extends 'layouts/application.html' %}
+{% block title %}studio.topmonks.com{% endblock %}
 
 {% block navigation %}
   {{ macros.navigation('studio') }}
