--- a/src/html/www.topmonks.com/meet-us/index.html
+++ b/src/html/www.topmonks.com/meet-us/index.html
@@ -1,7 +1,8 @@
 {% extends 'layouts/application.html' %}
+{% block title %}Meet Us - www.topmonks.com{% endblock %}
 
 {% block navigation %}
-{{ macros.navigation('community') }}
+{{ macros.navigation('meet-us') }}
 {% endblock %}
 
 {% block content %}
