--- a/src/html/4days.topmonks.com/index.html
+++ b/src/html/4days.topmonks.com/index.html
@@ -1,4 +1,5 @@
 {% extends 'layouts/application.html' %}
+{% block title %}4days.topmonks.com{% endblock %}
 
 {% block navigation %}
 {{ macros.navigation('4days') }}
