--- a/src/html/references.topmonks.com/index.html
+++ b/src/html/references.topmonks.com/index.html
@@ -1,4 +1,5 @@
 {% extends 'layouts/application.html' %}
+{% block title %}references.topmonks.com{% endblock %}
 
 {% block navigation %}
 {{ macros.navigation('about') }}
