--- a/src/html/www.topmonks.com/about-us/index.html
+++ b/src/html/www.topmonks.com/about-us/index.html
@@ -1,4 +1,5 @@
 {% extends 'layouts/application.html' %}
+{% block title %} About Us - www.topmonks.com{% endblock %}
 
 {% block navigation %}
   {{ macros.navigation('about-us') }}
