--- a/src/html/www.topmonks.com/contacts/index.html
+++ b/src/html/www.topmonks.com/contacts/index.html
@@ -1,4 +1,5 @@
 {% extends 'layouts/application.html' %}
+{% block title %}Contacts - www.topmonks.com{% endblock %}
 
 {% block navigation %}
   {{ macros.navigation('contacts') }}
