--- a/src/html/www.topmonks.cz/index.html
+++ b/src/html/www.topmonks.cz/index.html
@@ -1,7 +1,8 @@
 {% extends 'layouts/application.html' %}
+{% block title %}www.topmonks.cz{% endblock %}
 
 {% block navigation %}
-{{ macros.navigation('studio') }}
+{{ macros.navigation('topmonks.cz') }}
 {% endblock %}
 
 {% block content %}
