small HTML update

--- a/src/html/references.topmonks.com/index.html
+++ b/src/html/references.topmonks.com/index.html
@@ -2,15 +2,13 @@
 {% block title %}references.topmonks.com{% endblock %}
 
 {% block navigation %}
-{{ macros.navigation('about') }}
+{{ macros.navigation('references') }}
 {% endblock %}
 
 {% block content %}
   {{ macros.pageHeader('References') }}
 
-<main id="references" class="mdc-layout-grid">
-
-  <div class="mainBody">
+  <div class="mainBody mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
       <section id="startups" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Our startups</h2>
@@ -297,8 +295,6 @@
       </div>
     </article>
   </section>
-
-</main>
 
 
 {% endblock %}
