top menu & footer css files
Seems like structure we want is not fit what blendid is expecting, will see in future what to do with

--- a/src/html/shared/footer.html
+++ b/src/html/shared/footer.html
@@ -1,4 +1,5 @@
 {%- import 'macros/helpers.html' as macros -%}
+<link rel="stylesheet" href="../../stylesheets/components/footer-menu/index.css">
   <div class="nav-and-contacts">
     <div class="wrapper mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
@@ -10,9 +11,17 @@
           </p>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop">
-
-          {{ macros.navigation('', true) }}
-
+          <h3>Navigation</h3>
+            <nav>
+              <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="https://studio.topmonks.com/">Startup Studio</a></li>
+                <li><a href="https://teams.topmonks.com/">Teams as Service</a></li>
+                <li><a href="https://prodeti.topmonks.cz/">Programming for Kids</a></li>
+                <li><a href="/references/">references</a></li>
+                <li><a href="/www.topmonks.com/contacts">contacts</a></li>
+              </ul>
+            </nav>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop">
           <h3>Contact</h3>
@@ -54,7 +63,7 @@
     <div class="wrapper mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-          <p>© 2017 TopMonks, s.r.o.</p>
+          <p>© 2018 TopMonks, s.r.o.</p>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <div class="social-buttons">
