--- a/src/html/www.topmonks.com/meet-us/index.html
+++ b/src/html/www.topmonks.com/meet-us/index.html
@@ -3,8 +3,9 @@
 {% block rootPath %}../{% endblock %}
 
 {% block navigation %}
-{{ macros.navigation('meet-us') }}
+{% include 'shared/top-menu.html' %}
 {% endblock %}
+
 
 {% block content %}
   {{ macros.pageHeader('Community','Learn or die. Teach or die. Only learning and teaching brains flourish.') }}
