--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,7 +13,6 @@
 
 {% block content %}
 
-  {{ macros.pageHeader('Developers for your startup','We are your software development partners, experienced with both startup and corporate environment.') }}
-
+  {{ macros.pageHeader('Jenom rozcestník') }}
   {% include 'components/example-component/index.html' %}
 {% endblock %}
