--- a/src/html/macros/helpers.html
+++ b/src/html/macros/helpers.html
@@ -21,6 +21,7 @@
     <li><a href="/references.topmonks.com/" class="{% if activePage == 'references' %}active{% endif %}">references.topmonks.com</a></li>
     <li><a href="/studio.topmonks.com/" class="{% if activePage == 'studio' %}active{% endif %}">studio.topmonks.com</a></li>
     <li><a href="/teams.topmonks.com/">teams.topmonks.com</a></li>
+    <li><a href="/prodeti.topmonks.cz/">prodeti.topmonks.cz</a></li>
     <li><a href="/www.topmonks.cz/" class="{% if activePage == 'topmonks.cz' %}active{% endif %}">www.topmonks.cz</a></li>
     <li><a href="/www.topmonks.com/" class="{% if activePage == 'topmonks.com' %}active{% endif %}">www.topmonks.com</a></li>
     <li><a href="/www.topmonks.com/about-us/" class="{% if activePage == 'about-us' %}active{% endif %}"> About Us</a></li>
