typography basic, site max-width is set

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,6 +13,8 @@
 
 {% block content %}
 
-  {{ macros.pageHeader('Jenom rozcestník') }}
+  {{ macros.pageHeader('Typography test') }}
+  <h1>H1 nadpis</h1>
+<h2>H2 nadpis</h2>
   {% include 'components/example-component/index.html' %}
 {% endblock %}
